Fix CStyle and C++/boost indenters when automatic brackets enabled

Thanks to Janek Bevendorff for the patch!

FIXED-IN: KDE Frameworks 5.28
BUG: 370715
Differential Revision: D3105