autotests/src/testutils.h
@@ -117,6 +117,12 @@ public:
     Q_INVOKABLE void shiftToMatchingBracket(int cnt = 1);
 
     Q_INVOKABLE bool type(const QString &str);
+    
+    /**
+     * Toggle auto brackets. If you make use of it, make sure to
+     * disable them again at the end of your test, otherwise any following tests may fail.
+     */
+    Q_INVOKABLE void setAutoBrackets(bool enable = true);
 
     // Aliases
     Q_INVOKABLE void enter(int cnt = 1);            // KeyReturn
