autotests/input/indent/cppstyle/autobrackets3/input.js
@@ -1,0 +1,8 @@
+v.setAutoBrackets(true);
+v.setCursorPosition(6, 12);
+v.type("}");
+v.enter();
+v.type("}");
+v.enter();
+v.type("}");
+v.setAutoBrackets(false);
