autotests/input/indent/cstyle/openpar11/input.js
@@ -1,0 +1,5 @@
+v.setAutoBrackets(true);
+v.setCursorPosition(4,13);
+v.enter();
+v.type("{");
+v.setAutoBrackets(false);
